2002-07-20  Phil Edwards  <pme@gcc.gnu.org>

	* docs/html/abi.txt:  New file.
	* docs/html/23_containers/howto.html:  Tweak vector-overhead text.
	* docs/html/ext/lwg-active.html, docs/html/ext/lwg-defects.html:
	Import from upstream, R22.

	* include/bits/char_traits.h, include/bits/stl_iterator.h,
	include/bits/stl_iterator_base_types.h, libsupc++/exception,
	libsupc++/new, libsupc++/typeinfo:  Use @brief markup.

	* include/bits/deque.tcc, include/bits/stl_alloc.h,
	include/bits/stl_deque.h, include/bits/stl_list.h:  Postpone removal
	of deprecated functions until 3.4.  (Same timeframe, different text.)
	* include/bits/stl_vector.h:  Ditto.  Also do the same cleanups that
	the other sequence classes received.

2002-07-18  Brendan Kehoe  <brendan@zen.org>

	* bits/slice_array.h (_DEFINE_VALARRAY_OPERATOR): Fix typo of
	_Nname to _Name.
	
2002-07-19  Gabriel Dos Reis  <gdr@nerim.net>

	DR/123
	* include/bits/slice_array.h 
	(slice_array<T>::operator=(const T&)): Constify.
	* include/bits/gslice_array.h 
	(gslice_array<T>::operator=(const T&)):  Likewise.
	* include/bits/mask_array.h 
	(mask_array<T>::operator=(const T&)): Likewise.
	* include/bits/indirect_array.h
	(indirect_array<T>::operator=(const T&): Likewise.

2002-07-17  Phil Edwards  <pme@gcc.gnu.org>

	* docs/doxygen/run_doxygen:  Remove template parameter names from
	"Compound List" summary page.  Reformat.
	* docs/html/documentation.html:  XHTML fixes.

2002-07-16  Andreas Schwab  <schwab@suse.de>

	* libsupc++/new (set_new_handler): Declare to not throw any
	exceptions.
	* libsupc++/new_handler.cc (set_new_handler): Likewise.

2002-07-16  Gabriel Dos Reis  <gdr@nerim.net>

	* include/Makefile.am (bits_headers): Remove slice.h
	* include/Makefile.in: Regenerate.
	* include/bits/slice.h (slice): move to include/bits/slice_array.h
	* include/bits/slice.h Remove.
	* include/std/std_valarray.h: Don't #include bits/slice.h anymore.
	* include/bits/slice_array.h: Comply to official coding styles.