@@ -1,3 +1,14 @@
+2002-07-23  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* docs/html/documentation.html: Remove libstdc++-v3.0.86 links,
+	confusing usage of "latest."
+	De-tangle contributor information from introductory notes.
+	Move abi.txt link placement, activate.
+	Re-organize.
+	Move chapter info into old FAQ format. 
+	* docs/html/organization.html: Removed, obsoleted by doxygen work.
+	* docs/html/abi.txt: Add notes on testing ABI changes.
+	
 2002-07-20  Phil Edwards  <pme@gcc.gnu.org>
 
 	* docs/html/abi.txt:  New file.
